Issue #2467607 by jmfernandez: Pagination is overlaped to tables

--- a/sass/partials/components/_pager.sass
+++ b/sass/partials/components/_pager.sass
@@ -4,6 +4,7 @@
  */
 .item-list
   .pager
+    margin: 15px 0
     li
       padding: 0
       &.pager-current
@@ -11,10 +12,11 @@
       &.pager-first,
       &.pager-last
         a
-          +transition(all 0.2s ease-in-out)
+          display: inline-block
           padding: 5px 10px
           background-color: $background-pager-first-last
           color: $color-pager-first-last-a
+          +transition(all 0.2s ease-in-out)
           +border-radius(5px)
           &:hover
             background-color: $background-pager-first-last-hover
